<resources>
    <string name="app_name">Rick and Morty</string>
    <string name="password">Password</string>
    <string name="user">User</string>
    <string name="forgot_password_text">Forgot your password?</string>
    <string name="continuar">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="log_out">Sign out</string>
    <string name="search">Search</string>
    <string name="status">Status</string>
    <string name="specie">Especie</string>
    <string name="origin">Origin</string>
    <string name="character">Character</string>
    <string name="empty_favorites">Empty favorites</string>
    <string name="favorite_not_found">No favorite characters added</string>
</resources>