<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_main"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.rickandmorty.fragments.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_settingsActivity"
            app:destination="@id/settingsActivity" />
        <action
            android:id="@+id/action_homeFragment_to_characterFragment"
            app:destination="@id/characterFragment" />
        <action
            android:id="@+id/action_homeFragment_to_favoritesFragment"
            app:destination="@id/favoritesFragment" />
        <action
            android:id="@+id/action_homeFragment_to_signOutFragment"
            app:destination="@id/signOutFragment" />
    </fragment>
    <activity
        android:id="@+id/settingsActivity"
        android:name="com.rickandmorty.activities.SettingsActivity"
        android:label="activity_settings"
        tools:layout="@layout/activity_settings" />
    <fragment
        android:id="@+id/characterFragment"
        android:name="com.rickandmorty.fragments.CharacterFragment"
        android:label="@string/character"
        tools:layout="@layout/fragment_character">
        <argument
            android:name="characterId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.rickandmorty.fragments.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" >
        <action
            android:id="@+id/action_favoritesFragment_to_characterFragment"
            app:destination="@id/characterFragment" />
        <action
            android:id="@+id/action_favoritesFragment_self"
            app:destination="@id/favoritesFragment"
            app:popUpTo="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/signOutFragment"
        android:name="com.rickandmorty.fragments.SignOutFragment"
        tools:layout="@layout/fragment_sign_out" />
</navigation>